apps/PiHole/overlays/prod/00-pihole-deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  selector:
    matchLabels:
      context: prod
  template:
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:2022.02
        resources:
          requests: 
            cpu: "50m"
            memory: "60Mi"
          limits: 
            cpu: "80m"
            memory: "100Mi"
        volumeMounts:
          - mountPath: "/etc/pihole"
            name: pihole-etc
          - mountPath: "/etc/dnsmasq.d"
            name: dnsmasq-etc
      volumes:
      - name: pihole-etc
        persistentVolumeClaim:
          claimName: pihole-etc
      - name: dnsmasq-etc
        persistentVolumeClaim:
          claimName: pihole-dnsmasq-etc
