apps/PiHole/overlays/prod/00-pihole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  template:
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:2022.01
        resources:
          requests: 
            cpu: "50m"
            memory: "60Mi"
          limits: 
            cpu: "80m"
            memory: "100Mi"
