apps/PiHole/overlays/prod/01-pihole-svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-lb
spec:
  selector:
    app: pihole
    context: prod
  type: LoadBalancer
  loadBalancerIP: 192.168.0.11
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc
spec:
  selector:
    app: pihole
    context: prod
